@@ -49,6 +49,7 @@ var gl_workflowId = {{ workflow_id }};
 {% endif %}
 
 <div class="categories_table_workflow">
+<div id='sortable'>
 {% for category in categories %}
 <table class="category_workflow" id="category_id-{{ category.id }}">
 	<tr class="category-header">
@@ -141,6 +142,7 @@ var gl_workflowId = {{ workflow_id }};
 	{% endfor %}
 </table>
 {% endfor %}
+</div>
 </div>
 <!-- Error box -->
 <div id="dialogError" title="" style="visibility: hidden;">
