@@ -8,6 +8,7 @@ urlpatterns = patterns('workflow',
     url(r'^copy/$',                                                                     'views.copy_workflow',                              name='copy'),
     url(r'^rename/$',                                                                   'views.rename',                                     name='rename'),
     url(r'^create/$',                                                                   'views.create',                                     name='create'),
+    url(r'^set_order/$',                                                                'views.set_order',                                  name='set-order'),
     url(r'^item/(?P<item_id>\d+)/$',                                                    'views.item_update',                                name='item-update'),
     url(r'^item/$',                                                                     'views.item',                                        name='item'),
 )
