@@ -11,6 +11,7 @@ Version 0.4.0~dev
 	* Add 'rename category' feature.
 	* Add 'create category' feature.
 	* Add 'create item' feature.
+	* Add feature to sort categories.
 
 Version 0.3.2 Released on 2011/07/27
 
